--- a/package.json
+++ b/package.json
@@ -2,32 +2,40 @@
   "name": "haka",
   "version": "1.0.0",
   "description": "replicating server file structure on my computer",
-  "main": "index.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon index.ts",
+    "dev": "ts-node ./src/index.ts load -u https://komlankodoh.com -d ./ROOT_MASTER",
     "init": "sudo docker build -t server_mysql .",
-    "start": "ts-node index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "tsc && webpack ./dist/index.js -o ./build/scraper.js"
+  },
+  "bin": {
+    "scraper": "./dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-typescript": "^7.16.5",
     "axios": "^0.23.0",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
+    "log-beautify": "^1.2.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
-    "request": "^2.88.2",
+    "sqlite3": "^5.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@types/cheerio": "^0.22.30",
     "@types/jest": "^27.0.3",
     "@types/jquery": "^3.5.11",
     "@types/node": "^17.0.5",
-    "jest": "^27.4.5"
+    "jest": "^27.4.5",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
