--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node ./src/index.ts load -u https://komlankodoh.com -d ./ROOT_MASTER",
     "init": "sudo docker build -t server_mysql .",
     "start": "ts-node src/index.ts",
-    "mytest": "tsc && scraper load https://google.com .",
+    "demo": "tsc && scraper load https://komlankodoh.com ./dest",
     "build": "tsc"
   },
   "bin": {
