--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "ts-node ./src/index.ts load -u https://komlankodoh.com -d ./ROOT_MASTER",
     "init": "sudo docker build -t server_mysql .",
     "start": "ts-node src/index.ts",
-    "demo:load": "tsc && node ./dist/index.js load https://docs.mongodb.com/ ./dest -d mongodb",
-    "demo:serve": "tsc && node ./dist/index.js serve ./dest/docs.mongodb.com",
+    "demo:load": "tsc && node ./dist/index.js load https://komlankodoh.com ./dest -d mongodb",
+    "demo:serve": "tsc && node ./dist/index.js serve ./dest/komlankodoh.com",
     "build": "tsc && chmod +x ./dist/index.js"
   },
   "bin": {
@@ -26,16 +26,18 @@
     "yargs": "^17.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@types/cheerio": "^0.22.30",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/jquery": "^3.5.11",
     "@types/node": "^17.0.5",
+    "@types/sqlite3": "^3.1.8",
     "jest": "^27.4.5",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
