--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "strict": true,
+    "noImplicitAny": true
   },
+  "exclude": ["src/**/*.test.ts"],
   "lib": ["es2015"]
 }
