Fixed some bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,24 @@
   "compilerOptions": {
     "strict": true,
     "target": "es6",
-    "outDir": "dist",
-    "sourceMap": false,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true,
+    "incremental": true,
     "module": "commonjs",
+    "alwaysStrict": true,
+    "skipLibCheck": true,
     "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-  
+    "noImplicitOverride": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "forceConsistentCasingInFileNames": true,
   },
+  "include": ["src" ],
   "exclude": ["src/**/*.test.ts"],
-  "lib": ["es2015"]
+  "lib":"es2015",
 }
