--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "scraper-copier",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "replicating server file structure on my computer",
   "main": "./dist/index.js",
   "scripts": {
     "test": "jest",
-    "serve": "node ./dist/index.js serve komlankodoh.com",
-    "load": "tsc && node ./dist/index.js load https://komlankodoh.com ./dest",
+    "serve": "node ./dist/index.js serve www.sqlitetutorial.net",
+    "load": "tsc && node ./dist/index.js load https://www.sqlitetutorial.net/m ./dest ",
     "build": "tsc && chmod +x ./dist/index.js && pkg . --out-path dist/executable "
   },
   "bin": {
@@ -43,7 +43,7 @@
   "directories": {
     "test": "test"
   },
-  "types": "index.d.ts",
+  "types": "*.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Behemoth11/scraper-copier.git"
